landing page done and working on tips page

--- a/app/globals.css
+++ b/app/globals.css
@@ -83,6 +83,29 @@ body {
   font-family: var(--font-poppins);
 }
 
+p {
+  color: black;
+  margin-top: 1rem /* 16px */;
+  margin-bottom: 2rem /* 32px */;
+  font-weight: 500;
+  line-height: 2.5rem /* 40px */;
+  font-size: 20px;
+}
+
+h2 {
+  font-size: 2.25rem /* 36px */;
+  line-height: 2.5rem /* 40px */;
+  font-weight: 600;
+  line-height: 1;
+  padding-bottom: 2.5rem /* 40px */;
+}
+
+@media (min-width: 1024px) {
+  h2 {
+    font-size: 3.75rem /* 60px */;
+  }
+}
+
 .filter-grey {
   filter: brightness(0) saturate(100%) invert(47%) sepia(0%) saturate(217%)
     hue-rotate(32deg) brightness(98%) contrast(92%);
@@ -288,4 +311,16 @@ body {
   .animation-delay-4000 {
     animation-delay: 4s;
   }
+}
+
+.wrap-layer {
+  position: relative;
+}
+.text-layer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  /* non-critical styles left out */
 }
