--- a/app/globals.css
+++ b/app/globals.css
@@ -337,7 +337,7 @@ h4 {
   -ms-overflow-style: none;
 }
 
-/* REACT-BIG-CALANDER STYLES */
+/* REACT-FULL-CALENDAR STYLES */
 .fc .fc-popover {
   z-index: 2;
 }
